[project]
name = "poachers"
version = "0.1.0"
description = "A multiplayer FastAPI game where players can create teams and poach members from other teams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "pywrangler>=0.0.2",
    "uvicorn>=0.37.0",
    "libsql-client>=0.3.1",
]
